feat: adding update user

--- a/frontend/src/app/components/user-creation/user-creation.component.html
+++ b/frontend/src/app/components/user-creation/user-creation.component.html
@@ -12,8 +12,8 @@
         <label>Email</label>
         <input type="email" name="email" [(ngModel)]="newUser.email" placeholder="enerisan@gmail.com" required>
 
-        <!-- <label>Ville</label> -->
-        <input type="text" name="city" [(ngModel)]="newUser.city" placeholder="madrid" required>
+        <label>Ville</label>
+        <input type="text" name="city" [(ngModel)]="newUser.city" placeholder="adrid" required>
 
         <button type="submit">Ajouter</button>
     </form>
